--- a/changelog.txt
+++ b/changelog.txt
@@ -15,13 +15,27 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 254 -
+[2007/05/07] CR - Overview: Documentation and preparatory work in MapTypes for
+ an improvement for Pathing on our maps.
+[2007/05/07] CR - MapTypes: Added constants for the GAT values, taken verbatim
+ from Prometheus beforehand.  I'm still a bit unsure that these have the
+ correct names for the values.  Someone please, please double check!
+[2007/05/07] CR - MapTypes - TFloodItem: Changed Cost to LongWord (same range,
+ futureproofing for when Tsusai can't control his urge to compile 64 bit
+ binaries whenever CodeGear releases a 64b compiler).  Added methods for finding
+ the Manhattan and Diagonal Costs from the given item to a relative destination
+ point.  Added both for completeness, but I'm only intending to use
+ DiagonalCost since it'll give a more accurate heuristic distance.
+-
+
 - Rev 253 -
 [2007/05/06] CR - Overview: Minor cleanup in some TCharacter Set* methods --
-  documenting the routines, making parameters constant, and minimizing flags set
-  for saving the Character State TCharacter.DataChanged isn't flagged when the
-  value is identical to the Set* method's stored property value.
+ documenting the routines, making parameters constant, and minimizing flags set
+ for saving the Character State TCharacter.DataChanged isn't flagged when the
+ value is identical to the Set* method's stored property value.
 [2007/05/06] CR - Character - TCharacter.SetBAbyID, SetOnline, SetHomunID:
-  Aforementioned changes above applied to these property writing routines.
+ Aforementioned changes above applied to these property writing routines.
 -
 
 - Rev 252-
