--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 256 -
+[2007/05/08] - RaX - Fixed hints and warnings that Turbo Delphi failed to catch.
+ I finally fixed my compiler!
+-
+
 - Rev 255 -
 [2007/05/07] CR - Overview: Found the holy grail!  Speedup on pathing, with
  a combination of logic simplification, and finding the proper spot and 
